pod-reservations.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: elephant
  name: elephant
spec:
  containers:
  - image: redis
    name: elephant
    resources: 
      requests:
        cpu: "1"
        memory: "200Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
